compiler/tests/fail/slice_bad_field.afns
fn main() -> usize {
    let data: []u8;
    return data.cap;
}
